<resources>
    <string name="app_name">UnicalSolutionsTest</string>

    <string name="create_account">Create account</string>
    <string name="name">Name</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log In</string>
    <string name="sign_in">Sign In</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="password_length_condition">Password must not be less than 6 characters</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="phone_number">Phone Number</string>
    <string name="tvName">Full Name</string>
    <string name="profile_screen">Profile Screen</string>

</resources>